--- a/Projetos/Site divertidamente/index.html
+++ b/Projetos/Site divertidamente/index.html
@@ -47,6 +47,11 @@
 
     <section>
         Riley
+        <p>Riley Andersen é a protagonista de **Divertida Mente**, uma garota de 11 anos que passa por uma grande transformação em sua vida ao se mudar do interior de Minnesota para a movimentada São Francisco. Alegre e cheia de energia, Riley é apaixonada por hóquei e valoriza profundamente seus amigos, sua família e suas memórias felizes.  
+
+        Porém, essa mudança inesperada desencadeia desafios emocionais significativos, que são representados de forma brilhante pelas emoções que habitam sua mente: Alegria, Tristeza, Raiva, Medo e Nojinho. Ao longo da história, Riley enfrenta as dificuldades de se adaptar a um novo ambiente, enquanto aprende a lidar com os sentimentos de saudade, insegurança e tristeza que surgem no processo.  
+            
+        Riley simboliza o processo de amadurecimento, mostrando como as experiências – tanto boas quanto difíceis – moldam nossa identidade e nos ajudam a crescer. Sua jornada é um lembrete poderoso da importância de acolher todas as emoções como parte essencial da vida.</p>
     </section>
 
     <section>
